--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,21 @@
-.\idea
+.DS_Store
 node_modules
+/dist
 
-.eslintrc.json
-package.json
-yarn.lock
-yarn-error.log
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
